--- a/eComm_Reporting_Application.csproj
+++ b/eComm_Reporting_Application.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="bootstrap.chosen" Version="1.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
 </Project>
