--- a/JSON Report Parameter Mapping.json
+++ b/JSON Report Parameter Mapping.json
@@ -291,8 +291,109 @@
                             "query_type": "Shared",
                             "query": "/SharedDataSets/FiscalYear"
                         },
+                        "FiscalYearDefault":{
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/FiscalYearDefault"
+                        },
+                        "FiscalWeekDefault":{
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/FiscalWeekDefault"
+                        },
+                        "DepartmentHeaders":{
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/DepartmentHeaders"
+                        },
+                        "ClassHeaders":{
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/ClassHeaders"
+                        },
+                        "Vendors":{
+                            "query_type": "Stored Procedure",
+                            "query": "par_Vendors"
+                        },
+                        "Brands":{
+                            "query_type": "Stored Procedure",
+                            "query": "par_Brands"
+                        },
+                        "VendorHeaders":{
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/VendorHeaders"
+                        },
+                        "BrandHeaders":{
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/BrandHeaders"
+                        },
+                        "CategoryHeaders":{
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/Category"
+                        },
+                        "Trend":{
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/Trend"
+                        },
+                        "Banner":{
+                            "query_type": "Stored Procedure",
+                            "query": "par_Banner"
+                        }
                     },
-                    "parameters":{}
+                    "parameters":{
+                        "Banner":{
+                            "type": "Dropdown",
+                            "query_type": "Stored Procedure",
+                            "query": "par_Banner",
+                            "value": "Banner_Number",
+                            "label": "Banner_Name"
+                        },
+                        "Department_No":{
+                            "type": "Dropdown",
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/Departments",
+                            "value": "Department_Number",
+                            "label": "Department"
+                        },
+                        "InterMed":{
+                            "type": "Dropdown",
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/Classes",
+                            "value": "Class_Number",
+                            "label": "Class"
+                        },
+                        "Vendor_Pattern":{
+                            "type": "Text",
+                            "query_type": "Fixed",
+                            "query": "",
+                            "value": "",
+                            "label": ""
+                        },
+                        "Class_Number":{
+                            "type": "Dropdown",
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/Classes",
+                            "value": "Class_Number",
+                            "label": "Class"
+                        },
+                        "Vendor":{
+                            "type": "Dropdown",
+                            "query_type": "Stored Procedure",
+                            "query": "par_Vendors",
+                            "value": "Vendor_ID",
+                            "label": "Vendor"
+                        },
+                        "Category":{
+                            "type": "Dropdown",
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/Categories",
+                            "value": "Category_Number",
+                            "label": "Category"
+                        },
+                        "Fiscal_Year":{
+                            "type": "Textbox",
+                            "query_type": "Shared",
+                            "query": "/SharedDataSets/FiscalYear",
+                            "value": "FISCAL_YEAR",
+                            "label": "FISCAL_YEAR"
+                        },
+                    }
                 },
             }
         },
